fdo#64984 - EDITING: Creating table with GUI - table could not be saved

This bug was introduced by my commit
002aab309055b7feeeeeb25c1835b6abe6646729
"fdo#46808, convert sdb::tools::ConnectionTools to new style"

(cherry picked from commit 73a809cba87eefbb495c5ba53f89b48d671f8230)

Change-Id: Ib10f97bbe46d20db663047d2f35ec4850df839fa